Fixing bug overflow style

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,25 +6,25 @@ h5,
 h6,
 p,
 a {
-	font-family: "Poppins";
+  font-family: "Poppins";
 }
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 button {
-	font-family: "Poppins";
-	border: none;
-	outline: none;
-	cursor: pointer;
-	transition: 0.2s;
-	&:hover {
-		transform: scale(1.04);
-	}
+  font-family: "Poppins";
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.2s;
+  &:hover {
+    transform: scale(1.04);
+  }
 }
 input {
   font-family: "Poppins";
@@ -32,5 +32,16 @@ input {
   padding: 16px;
   &::placeholder {
     color: rgba(0, 0, 0, 0.4);
+  }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+  only screen and (-o-min-device-pixel-ratio: 3/2),
+  only screen and (min--moz-device-pixel-ratio: 1.5),
+  only screen and (min-device-pixel-ratio: 1.5) {
+  html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
   }
 }
