--- a/styles/sidebar.module.scss
+++ b/styles/sidebar.module.scss
@@ -2,58 +2,58 @@
 @import "font.module";
 
 .sidebar {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 999;
-	width: 320px;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	gap: 40px;
-	background-color: $base;
-	padding: 24px;
-	.connect_button {
-		width: 100%;
-		font-size: 18px;
-		font-weight: 700;
-		background: $gradient-main;
-		border: none;
-		border-radius: 8px;
-		padding: 16px;
-		cursor: pointer;
-	}
-	.menu_wrapper {
-		display: flex;
-		flex-direction: column;
-		gap: 40px;
-		.menu {
-			display: flex;
-			gap: 16px;
-			color: white;
-			font-size: 18px;
-			font-weight: 600;
-			p {
-				width: 100%;
-				font-size: 18px;
-				font-weight: 600;
-				color: $white;
-			}
-		}
-		.submenu_wrapper {
-			display: flex;
-			flex-direction: column;
-			margin-top: 8px;
-			transition: cubic-bezier(0.075, 0.82, 0.165, 1);
-			padding-left: 42px;
-			gap: 20px;
-			.link {
-				font-size: 18px;
-			}
-			.link_wrapper {
-				color: rgba(255, 255, 255, 0.6);
-				font-size: 18px;
-			}
-		}
-	}
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 320px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  background-color: $base;
+  padding: 24px;
+  z-index: 100;
+  .connect_button {
+    width: 100%;
+    font-size: 18px;
+    font-weight: 700;
+    background: $gradient-main;
+    border: none;
+    border-radius: 8px;
+    padding: 16px;
+    cursor: pointer;
+  }
+  .menu_wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    .menu {
+      display: flex;
+      gap: 16px;
+      color: white;
+      font-size: 18px;
+      font-weight: 600;
+      p {
+        width: 100%;
+        font-size: 18px;
+        font-weight: 600;
+        color: $white;
+      }
+    }
+    .submenu_wrapper {
+      display: flex;
+      flex-direction: column;
+      margin-top: 8px;
+      transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+      padding-left: 42px;
+      gap: 20px;
+      .link {
+        font-size: 18px;
+      }
+      .link_wrapper {
+        color: rgba(255, 255, 255, 0.6);
+        font-size: 18px;
+      }
+    }
+  }
 }
